fixed fixtures; added /geo/city

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/geo.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/geo.yml
@@ -2,3 +2,8 @@ regions_list:
     path:     /region
     defaults: { _controller: ActedLegalDocsBundle:Geo:region, _format: json }
     methods:  GET
+
+cities_list:
+    path:     /city
+    defaults: { _controller: ActedLegalDocsBundle:Geo:city, _format: json }
+    methods:  GET
