add fixtures, add new table, add form for created event, add class for form created event, add method for get all events type

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Event.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Event.orm.yml
@@ -19,6 +19,8 @@ Acted\LegalDocsBundle\Entity\Event:
           nullable: true
         eventTypeId:
           type: integer(11)
+        venueTypeId:
+          type: integer(11)
         isInternational:
           type: boolean
         address:
