--- a/src/Acted/LegalDocsBundle/Resources/config/routing/event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/event.yml
@@ -7,3 +7,8 @@ get_events_type:
     path:     /list_events_type
     defaults: { _controller: ActedLegalDocsBundle:Events:getListEventsType, _format: json }
     methods:  GET
+
+get_events_by_user_id:
+    path:     /user_events
+    defaults: { _controller: ActedLegalDocsBundle:Events:getEventsByUserId, _format: json }
+    methods:  GET
