--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventOffer.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventOffer.orm.yml
@@ -9,12 +9,6 @@ Acted\LegalDocsBundle\Entity\EventOffer:
             generator:
                 strategy: AUTO
     fields:
-        eventId:
-          type: integer(20)
-          notnull: true
-        offerId:
-          type: integer(20)
-          notnull: true
         status:
           type: string(32)
           notnull: true
@@ -39,4 +33,9 @@ Acted\LegalDocsBundle\Entity\EventOffer:
           notnull: true
         readDateTime:
           type: datetime
+    manyToOne:
+        event:
+          targetEntity: Acted\LegalDocsBundle\Entity\Event
+        offer:
+          targetEntity: Acted\LegalDocsBundle\Entity\Offer
     lifecycleCallbacks: {  }
