--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -13,6 +13,8 @@ Acted\LegalDocsBundle\Entity\Event:
             groups: [Default, getEvent]
         startingDate:
             groups: [Default, getEvent]
+        endingDate:
+            groups: [Default, getEvent]
         timing:
             groups: [Default, getEvent]
         comments:
