--- a/src/Acted/LegalDocsBundle/Resources/config/routing/event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/event.yml
@@ -12,3 +12,8 @@ get_events_by_user_id:
     path:     /user_events
     defaults: { _controller: ActedLegalDocsBundle:Events:getEventsByUserId, _format: json }
     methods:  GET
+
+reject_offer:
+    path: /change_status/reject/{id}
+    defaults: { _controller: ActedLegalDocsBundle:Events:changeStatusToReject, _format: json }
+    methods: GET
