--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.User.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.User.yml
@@ -7,6 +7,8 @@ Acted\LegalDocsBundle\Entity\User:
       exclude: true
     roles:
       exclude: true
+    avatar:
+      groups: [quote_request]
   virtual_properties:
       getRoles:
         serialized_name: roles
