--- a/src/Acted/LegalDocsBundle/Resources/config/routing/event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/event.yml
@@ -8,6 +8,11 @@ get_events_type:
     defaults: { _controller: ActedLegalDocsBundle:Events:getListEventsType, _format: json }
     methods:  GET
 
+get_venue_type:
+    path:     /list_venue_type
+    defaults: { _controller: ActedLegalDocsBundle:Events:getListVenueType, _format: json }
+    methods:  GET
+
 get_events_by_user_id:
     path:     /user_events
     defaults: { _controller: ActedLegalDocsBundle:Events:getEventsByUserId, _format: json }
