create chat after created event, add check if exist event, created first message after created eventOffer, rm required true from message date

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Message.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Message.orm.yml
@@ -26,6 +26,7 @@ Acted\LegalDocsBundle\Entity\Message:
           notnull: true
         readDateTime:
           type: datetime
+          nullable: true
     manyToOne:
         chatRoom:
             targetEntity: Acted\LegalDocsBundle\Entity\ChatRoom
