--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Performance.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Performance.yml
@@ -1,5 +1,9 @@
 Acted\LegalDocsBundle\Entity\Performance:
-  exclusion_policy: NONE
-  properties:
-    profile:
-      exclude: true
+    exclusion_policy: NONE
+    properties:
+        profile:
+            exclude: true
+        id:
+            groups: [chat_list, chat_room]
+        title:
+            groups: [chat_list, chat_room]
