--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.RefCity.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.RefCity.yml
@@ -4,6 +4,6 @@ Acted\LegalDocsBundle\Entity\RefCity:
         region:
             exclude: true
         name:
-            groups: [Default, getEvent]
+            groups: [Default, getEvent, chat_list]
         id:
             groups: [Default, getEvent]
