--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Message.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Message.orm.yml
@@ -9,12 +9,6 @@ Acted\LegalDocsBundle\Entity\Message:
             generator:
                 strategy: AUTO
     fields:
-        senderUserId:
-          type: integer(20)
-          notnull: true
-        receiverUserId:
-          type: integer(20)
-          notnull: true
         subject:
           type: string(128)
           notnull: true
@@ -31,4 +25,8 @@ Acted\LegalDocsBundle\Entity\Message:
         chatRoom:
             targetEntity: Acted\LegalDocsBundle\Entity\ChatRoom
             inversedBy: message
+        receiverUser:
+            targetEntity: Acted\LegalDocsBundle\Entity\User
+        senderUser:
+            targetEntity: Acted\LegalDocsBundle\Entity\User
     lifecycleCallbacks: {  }
