--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.User.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.User.yml
@@ -8,7 +8,11 @@ Acted\LegalDocsBundle\Entity\User:
     roles:
       exclude: true
     avatar:
-      groups: [quote_request]
+      groups: [quote_request, chat_room]
+    firstname:
+      groups: [chat_list, chat_room]
+    lastname:
+      groups: [chat_list, chat_room]
   virtual_properties:
       getRoles:
         serialized_name: roles
