--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Message.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Message.yml
@@ -2,14 +2,14 @@ Acted\LegalDocsBundle\Entity\Message:
     exclusion_policy: NONE
     properties:
         id:
-            groups: [chat_list, chat_room]
+            groups: [chat_list, chat_room, message]
         messageText:
-            groups: [chat_list, chat_room]
+            groups: [chat_list, chat_room, message]
         sendDateTime:
-            groups: [chat_list, chat_room]
+            groups: [chat_list, chat_room, message]
         readDateTime:
-            groups: [chat_list, chat_room]
+            groups: [chat_list, chat_room, message]
         receiverUser:
-            groups: [chat_list]
+            groups: [chat_list, message]
         senderUser:
-            groups: [chat_room]
+            groups: [chat_room, message]
