--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.User.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.User.yml
@@ -8,11 +8,11 @@ Acted\LegalDocsBundle\Entity\User:
     roles:
       exclude: true
     avatar:
-      groups: [quote_request, chat_room]
+      groups: [quote_request, chat_room, message]
     firstname:
-      groups: [chat_list, chat_room]
+      groups: [chat_list, chat_room, message]
     lastname:
-      groups: [chat_list, chat_room]
+      groups: [chat_list, chat_room, message]
   virtual_properties:
       getRoles:
         serialized_name: roles
