--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "gulp-order": "^1.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
-    "gulp-uglifycss": "^1.0.6"
+    "gulp-uglifycss": "^1.0.6",
+    "gulp-install": "~0.6.0",
+    "gulp": "~3.9.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
