change logic search by same country

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefRegion.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefRegion.orm.yml
@@ -31,4 +31,5 @@ Acted\LegalDocsBundle\Entity\RefRegion:
         country:
           targetEntity: Acted\LegalDocsBundle\Entity\RefCountry
           inversedBy: regions
+          fetch: EAGER
     lifecycleCallbacks: {  }
