--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -149,6 +149,10 @@ liip_imagine:
             quality: 100
             filters:
                 relative_resize: { widen: 1080, mode: outbound }
+        background:
+            quality: 100
+            filters:
+                relative_resize: { widen: 3200, mode: outbound }
 
 nelmio_api_doc: ~
 
