change serialize data for get event

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -23,7 +23,15 @@ Acted\LegalDocsBundle\Entity\Event:
             groups: [Default, getEvent]
         numberOfGuests:
             groups: [getEvent]
+        venueType:
+            groups: [getEvent]
+        eventType:
+            groups: [getEvent]
         title:
             groups: [Default, getEvent, chat_list]
         user:
             groups: [chat_list, chat_room]
+    virtual_properties:
+        getCountryId:
+            serialized_name: countryId
+            groups: [getEvent]
