add comments to answer request

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -20,7 +20,7 @@ Acted\LegalDocsBundle\Entity\Event:
         timing:
             groups: [Default, getEvent, chat_list]
         comments:
-            groups: [Default, getEvent]
+            groups: [Default, getEvent, chat_list]
         numberOfGuests:
             groups: [getEvent]
         venueType:
