--- a/src/Acted/LegalDocsBundle/Resources/config/routing.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing.yml
@@ -56,4 +56,4 @@ acted_legal_docs_event:
 
 acted_legal_docs_chat_room:
   resource: "@ActedLegalDocsBundle/Resources/config/routing/chatRoom.yml"
-  prefix: /chat_room
+  prefix: /dashboard
