--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -15,6 +15,7 @@ Acted\LegalDocsBundle\Entity\Event:
             groups: [Default, getEvent]
         startingDate:
             groups: [Default, getEvent, chat_list]
+            type: DateTime<"m/d/Y">
         endingDate:
             groups: [Default, getEvent]
         timing:
@@ -29,6 +30,9 @@ Acted\LegalDocsBundle\Entity\Event:
             groups: [getEvent]
         title:
             groups: [Default, getEvent, chat_list]
+        address:
+            groups: [Default, getEvent, chat_list]
+            serialized_name: location
         user:
             groups: [chat_list, chat_room]
     virtual_properties:
