--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -1,5 +1,5 @@
 chat_room_list:
-    path:     /requires/{userId}
+    path:     /enquiries/{userId}
     defaults: { _controller: ActedLegalDocsBundle:ChatRoom:getChatRoomList }
     methods:  GET
 
@@ -12,5 +12,3 @@ chat_room_message:
     path:     /message/{message}
     defaults: { _controller: ActedLegalDocsBundle:ChatRoom:getMessage }
     methods:  GET
-
-
