--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "willdurand/geocoder": "^3.3",
         "friendsofsymfony/rest-bundle": "^1.7",
         "beberlei/DoctrineExtensions": "^1.0",
-        "misd/phone-number-bundle": "^1.1"
+        "misd/phone-number-bundle": "^1.1",
+        "tweedegolf/swiftmailer-logger-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.0.6",
