--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -34,7 +34,7 @@ Acted\LegalDocsBundle\Entity\Event:
             groups: [Default, getEvent, chat_list]
             serialized_name: location
         user:
-            groups: [chat_list, chat_room]
+            groups: [chat_list]
     virtual_properties:
         getCountryId:
             serialized_name: countryId
