--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Offer.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Offer.yml
@@ -3,3 +3,6 @@ Acted\LegalDocsBundle\Entity\Offer:
     properties:
         performances:
             groups: [chat_list, chat_room]
+        comments:
+            groups: [chat_list, chat_room]
+
