add showing message by filter, add new field archived to Message model, add ability to archived message

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -12,3 +12,13 @@ chat_room_message:
     path:     /message/{message}
     defaults: { _controller: ActedLegalDocsBundle:ChatRoom:getMessage }
     methods:  GET
+
+change_status_message:
+    path:     /archived/message/{messageId}
+    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:archivedMessage }
+    methods:  POST
+
+filter_message:
+    path:     /filter/messages/{userId}
+    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:getAllMessageByFilter }
+    methods:  GET
