--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Message.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Message.orm.yml
@@ -21,6 +21,10 @@ Acted\LegalDocsBundle\Entity\Message:
         readDateTime:
           type: datetime
           nullable: true
+        archived:
+          type: boolean
+          options:
+            default: false
     manyToOne:
         chatRoom:
             targetEntity: Acted\LegalDocsBundle\Entity\ChatRoom
