--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -6,32 +6,32 @@ Acted\LegalDocsBundle\Entity\Event:
         country:
             groups: [Default, getEvent]
         city:
-            groups: [Default, getEvent, chat_list]
+            groups: [Default, getEvent, chat_list, chat_room]
         eventRef:
             groups: [Default, getEvent]
         eventTypeId:
-            groups: [Default, getEvent, chat_list]
+            groups: [Default, getEvent, chat_list, chat_room]
         venueTypeId:
             groups: [Default, getEvent]
         startingDate:
-            groups: [Default, getEvent, chat_list]
+            groups: [Default, getEvent, chat_list, chat_room]
             type: DateTime<"m/d/Y">
         endingDate:
             groups: [Default, getEvent]
         timing:
-            groups: [Default, getEvent, chat_list]
+            groups: [Default, getEvent, chat_list, chat_room]
         comments:
-            groups: [Default, getEvent, chat_list]
+            groups: [Default, getEvent, chat_list, chat_room]
         numberOfGuests:
-            groups: [getEvent]
+            groups: [getEvent, chat_room]
         venueType:
             groups: [getEvent]
         eventType:
             groups: [getEvent]
         title:
-            groups: [Default, getEvent, chat_list]
+            groups: [Default, getEvent, chat_list, chat_room]
         address:
-            groups: [Default, getEvent, chat_list]
+            groups: [Default, getEvent, chat_list, chat_room]
             serialized_name: location
         user:
             groups: [chat_list]
