--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Offer.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Offer.yml
@@ -2,4 +2,4 @@ Acted\LegalDocsBundle\Entity\Offer:
     exclusion_policy: NONE
     properties:
         performances:
-            groups: [chat_list, chat_room]
+            groups: [chat_list, chat_room, all_messages]
