add status offer to showing all message

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventOffer.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventOffer.orm.yml
@@ -41,4 +41,5 @@ Acted\LegalDocsBundle\Entity\EventOffer:
           targetEntity: Acted\LegalDocsBundle\Entity\Event
         offer:
           targetEntity: Acted\LegalDocsBundle\Entity\Offer
+          inversedBy: eventOffer
     lifecycleCallbacks: {  }
