--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.ChatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.ChatRoom.yml
@@ -4,7 +4,7 @@ Acted\LegalDocsBundle\Entity\ChatRoom:
         id:
             groups: [chat_list]
         event:
-            groups: [chat_room, chat_list]
+            groups: [chat_room, chat_list, all_messages]
         offer:
             groups: [chat_list, chat_room, all_messages]
         message:
