--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -6,7 +6,7 @@ Acted\LegalDocsBundle\Entity\Event:
         country:
             groups: [Default, getEvent]
         city:
-            groups: [Default, getEvent, chat_list, chat_room]
+            groups: [Default, getEvent, chat_list, chat_room, all_messages]
         eventRef:
             groups: [Default, getEvent]
         eventTypeId:
