--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -14,7 +14,7 @@ Acted\LegalDocsBundle\Entity\Event:
         venueTypeId:
             groups: [Default, getEvent]
         startingDate:
-            groups: [Default, getEvent, chat_list, chat_room]
+            groups: [Default, getEvent, chat_list, chat_room, all_messages]
             type: DateTime<"m/d/Y">
         endingDate:
             groups: [Default, getEvent]
@@ -29,7 +29,7 @@ Acted\LegalDocsBundle\Entity\Event:
         eventType:
             groups: [getEvent]
         title:
-            groups: [Default, getEvent, chat_list, chat_room]
+            groups: [Default, getEvent, chat_list, chat_room, all_messages]
         address:
             groups: [Default, getEvent, chat_list, chat_room]
             serialized_name: location
