add offer id to answer

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Offer.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Offer.yml
@@ -1,6 +1,8 @@
 Acted\LegalDocsBundle\Entity\Offer:
     exclusion_policy: NONE
     properties:
+        id:
+            groups: [chat_list, chat_room, all_messages]
         performances:
             groups: [chat_list, chat_room]
         comments:
