--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Offer.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Offer.orm.yml
@@ -26,7 +26,7 @@ Acted\LegalDocsBundle\Entity\Offer:
           type: string(256)
           nullable: true
         comments:
-          type: string(256)
+          type: text
           nullable: true
     manyToMany:
         performances:
