update chatRoom, add push to chat

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -33,3 +33,8 @@ show_logs_messaging:
     defaults: { _controller: ActedLegalDocsBundle:ChatRoom:showLogs, _format: json }
     methods:  GET
 
+websocket_push:
+    path: /web/push/{chatId}
+    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:webSocketPush }
+    methods:  POST
+
