update relation with chat room and user

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/ChatRoom.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/ChatRoom.orm.yml
@@ -13,9 +13,12 @@ Acted\LegalDocsBundle\Entity\ChatRoom:
             targetEntity: Acted\LegalDocsBundle\Entity\Message
             mappedBy: chatRoom
     manyToOne:
-        user:
+        artist:
             targetEntity: Acted\LegalDocsBundle\Entity\User
-            inversedBy: chatRooms
+            inversedBy: chatRoomsArtist
+        client:
+            targetEntity: Acted\LegalDocsBundle\Entity\User
+            inversedBy: chatRoomsClient
         event:
             targetEntity: Acted\LegalDocsBundle\Entity\Event
             inversedBy: chatRooms
