add actions for read unread message, push to chat message

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -38,3 +38,8 @@ websocket_push:
     defaults: { _controller: ActedLegalDocsBundle:ChatRoom:webSocketPush }
     methods:  POST
 
+read_message:
+    path: /read_message/{chatId}
+    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:readMessagesInChat }
+    methods:  POST
+
